Old CRT effect for space sam

--- a/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/spaceshotsam/sam-exe.html
+++ b/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/spaceshotsam/sam-exe.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Rajdhani|Open+Sans+Condensed:300" rel="stylesheet">
 <div style="font-family:Rajdhani">When you're done: <a href="../../index.html">power off, open disk door, pull out floppy</a></div>
+<script src="js/glfx.js"></script>
 <script src="js/input.js"></script>
 <script src="js/enemy.js"></script>
 <script src="js/powerup.js"></script>
@@ -12,3 +13,4 @@
 <script src="js/particles.js"></script>
 <script src="js/menus.js"></script>
 <script src="js/main.js"></script>
+<div style="font-family:Rajdhani">(incorporates code from Evan Wallace released under the MIT license)</div>
