Added build of new H scene into the Twine links

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -337,7 +337,7 @@ muteShow.addEventListener("click", toggleMuteVO);
 function updateMuteIndicator() {
 	muteShow.innerHTML = (speakerThing.sayWords ? "🔊" : "🔇")+" (M key)";
 }
-updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="blue"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="389,555" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
+updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="blue"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="389,555" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
 
 Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine scenes to toggle Voiceover on or off. This will be restored when returning from prototypes.
 
@@ -384,8 +384,8 @@ No others are here yet, use back option on the left to return
 (link: &quot;kornel demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
-
-Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="VO" position="914,345" size="100,100">Patting yourself over, you seem fine.
+(link: &quot;H demo&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
+</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="VO" position="914,345" size="100,100">Patting yourself over, you seem fine.
 
 Sight is blurry. Maybe it&#39;s from waking up?
 
@@ -599,18 +599,18 @@ In one corner is a particularly tidy garden.
 
 There&#39;s a sticky note on top. It says, &quot;I contain every book I&#39;ve ever copied a page from. Come see.&quot;
 
-(link: &quot;will you try... entering the copier?&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]</tw-passagedata><tw-passagedata pid="44" name="cubeFar1" tags="" position="1113,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="45" name="cubeFar2" tags="" position="1263,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="46" name="cubeFar3" tags="" position="1413,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="47" name="cubeFar4" tags="" position="1563,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="48" name="windowShade" tags="" position="1713,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="49" name="libraryArea by AshCat" tags="ReplacedByGame" position="1069,1261" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="50" name="timeMachine" tags="" position="2108,564.6666666666667" size="100,100">Oh hey, yep, that is certainly a time machine.
+(link: &quot;will you try... entering the copier?&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]</tw-passagedata><tw-passagedata pid="44" name="cubeFar1" tags="" position="1113,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="45" name="cubeFar2" tags="" position="1263,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="46" name="cubeFar3" tags="" position="1413,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="47" name="cubeFar4" tags="" position="1563,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="48" name="windowShade" tags="" position="1713,1475" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="49" name="libraryArea by AshCat" tags="ReplacedByGame" position="1069,1261" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="50" name="timeMachine" tags="" position="2108,564" size="100,100">Oh hey, yep, that is certainly a time machine.
 
 Do you... wanna use it?
 
-[[Yes, punch in 1983, obviously-&gt;pastOffice]]</tw-passagedata><tw-passagedata pid="51" name="pastOffice" tags="oldOffice" position="2272.9999999999995,486.3333333333333" size="100,100">You&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?
+[[Yes, punch in 1983, obviously-&gt;pastOffice]]</tw-passagedata><tw-passagedata pid="51" name="pastOffice" tags="oldOffice" position="2272,486" size="100,100">You&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?
 
-[[Step back into the main office-&gt;oldOfficeMain]]</tw-passagedata><tw-passagedata pid="52" name="oldOfficeMain" tags="oldOffice" position="2468,634.6666666666666" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller, somehow? It seems to have undergone some expansion somewhere in the past few decades, but what&#39;s here is also more sparse. Apparently there used to be 3 private offices where you last saw a dozen cucibles packed together.
+[[Step back into the main office-&gt;oldOfficeMain]]</tw-passagedata><tw-passagedata pid="52" name="oldOfficeMain" tags="oldOffice" position="2468,634" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller, somehow? It seems to have undergone some expansion somewhere in the past few decades, but what&#39;s here is also more sparse. Apparently there used to be 3 private offices where you last saw a dozen cucibles packed together.
 
-Visit the reception area
-Enter the private office on the left
-Enter the private office in the middle
-Enter the private office on the right</tw-passagedata></tw-storydata>
+[[Visit the reception area-&gt;oldReception]]
+[[Enter the private office on the left-&gt;oldOfficeL]]
+[[Enter the private office in the middle-&gt;oldOfficeM]]
+[[Enter the private office on the right-&gt;oldOfficeR]]</tw-passagedata><tw-passagedata pid="53" name="oldReception" tags="oldOffice" position="2468,784" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="54" name="oldOfficeL" tags="oldOffice" position="2318,784" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="55" name="oldOfficeM" tags="oldOffice" position="2588,784" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="56" name="oldOfficeR" tags="oldOffice" position="2708,784" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
