--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -467,7 +467,18 @@ The counter is curved, with a white marble top. A coffee machine and toaster ove
 [[Step inside the elevator (to distant future tower)-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="garden" tags="" position="1939,898" size="100,100">Hedge maze?
 Classical statues
 
-[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="18" name="graveyard" tags="" position="1944,1042" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="19" name="futureTower" tags="futureTower" position="1924.3333333333333,66.66666666666667" size="100,100">overlooking city in all directions
+[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="18" name="graveyard" tags="" position="1944,1042" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="19" name="futureTower" tags="futureTower" position="1924.3333333333333,66.66666666666667" size="100,100">After a suspiciously long elevator ride, the door dings, and opens to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
+
+Flying cars whiz by, right outside the window, forming layers of orderly traffic.
+
+This doesn&#39;t make any sense from what you saw below.
+
+Is it just a 3D video wall?
+
+-Walk closer to inspect
+-Head left towards the bar
+-Walk up the iron spiral stairs to the right
+
 (to be continued)</tw-passagedata><tw-passagedata pid="20" name="playerPath2-teleporter" tags="" position="159,58" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
 Your starched collar is warm and moist from sweat. Pulling your tie loose to breathe easier, you glance down just as the lower half of your legs are finishing phasing in. They&#39;ve always advised you not to look down, but now that you finally got the chance to do this, it&#39;s hard to look away. They warned that would probably happen, too.
