new art for uploading and fidonet echomail mission ojectives

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -19,6 +19,21 @@
     <div id='hint'></div>
 </div>
 
+<div onclick='toggleCheats()' id='walkthrough'>Walkthrough (click for spoilers)
+DIR
+BBS
+BTF
+MSG
+QUIT
+DEFRAG
+SYSOP
+IGNORE
+BBS
+DTC
+UPLOAD
+DB01.TXT
+</div>
+
 <audio id='keyboardSound'><source src="keyboard.mp3" type="audio/mpeg"></audio>
 <audio id='discSound'><source src="disc_drive.mp3" type="audio/mpeg"></audio>
 <audio id='modemSound'><source src="modem_connect.mp3" type="audio/mpeg"></audio>
@@ -30,11 +45,13 @@ All rights reserved.
 
 Volume in drive A is TOPSCRET
 Volume Serial Number is 9A3E-085C
+
 </pre>
 
 <pre id='HELP'>
 For a list of installed programs
 type DIR and press ENTER.
+
 </pre>
 
 <pre id='DIAL'>
@@ -290,12 +307,42 @@ Enter local filename:
 
 <pre id='DB01.TXT'>
 █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
-█ z-Modem file transfer █ Filename: DB01.TXT █
+█ z-Modem file transfer   █ Filename: DB01.TXT   █
 █▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
+
 0%.......25%........50%........75%........100%
+
 ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-░ Download complete! Payload size 1281 bytes ░
+░ Download complete! Payload size 1281 bytes     ░
 ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+</pre>
+
+<pre id='MSG'>
+┌────────────────────────────────────────────────┐
+│ Echo-mail system v4.1       Fidonet Encryption │
+├────────────────────────────────────────────────┤
+│ To: Player001               From: DJ Razor1912 │
+│ Date: 01-01-89        Re: Emergency Extraction │
+├────────────────────────────────────────────────┤
+│                                                │
+│ If you're reading this, congrats on hacking    │
+│ your way in. This is a priority one mission.   │
+│                                                │
+│ Objectives:                                    │
+│                                                │
+│ 1. Find a way to extract the hidden password   │
+│ database located on this computer.             │
+│                                                │
+│ 2. Transfer the data payload to our partners   │
+│ at Death to Chaos. Good luck!                  │
+│                                                │
+└───────────────────────────────────────────────┘
+
+</pre>
+
+<pre id='QUIT'>
+Disconnecting modem on COM1...
+
 </pre>
 
 </body>
