logic for password/username entry fields and bbs shutdown

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -198,7 +198,8 @@ Welcome to ░░░ Death To Chaos BBS ░░░
 ░░░ ███▄▄▄██▀ ░░ ███ ░░ ▀██▄▄▄███ ░░░
 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 
-Enter username:
+Username: ********
+Password: *************
 </pre>
 <pre id='DNS'>
 ▀██▀▀▀▀▀▀▀▀███▄ ▀█▀▀▀▀▀███▄ ▄▓██▀▀▀██▀▀ ■·
@@ -210,6 +211,12 @@ Enter username:
 ▄▄▄▄▄▄▄█▓▒░ DYNASTY ░▒▓██▄▄▄██▓▒░ ░▒▓██▄▄▄·
 █▓▒░   RELEASE DATE:  08.APRIL 1996   ░▒▓█
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+
+Login: ******
+PW: ***************
+
+NO CURRENT MESSAGES. THANK YOU FOR VISITING.
+
 </pre>
 
 <pre id='DMN'>
@@ -219,6 +226,13 @@ Enter username:
 █▓█  █▓█ ███  ▐  ███ ███  ███ y
 ┌▀██▄▀██▀ █▀  ─── █▀  █▀ ─ █▀ ─┐
 └──── ▀ ─────D E M O N─────────┘
+
+What is your handle? *********
+Please enter your password: ***************
+
+Current messages: (0)
+Pending Downloads: (0)
+
 </pre>
 
 <pre id='DLX'>
@@ -234,7 +248,12 @@ Connected at 1200 baud!
 │██▄██▀ ▀█▄█▄▓ ▀█▄██▓ ▀█▄██▀ ██ ███ ▀█▄█▄▓│
 └──────▀─────────────────────────────roy──┘
 
-Username:
+Username: ******
+Pass: **********
+
+Stack overflow error 766 in MODEM.PAS line 451
+Shutting down...
+
 </pre>
 
 <pre id='CTK'>
@@ -252,7 +271,12 @@ Connected at 1200 baud!
 ▀ ▀▀▀▀▄ ▄▀▀ █▀  ▀▀▀  ▀ ▀▄ ▄▀
        ▀                 ▀
 
-Login:
+User Login: *********
+Password: **************
+
+Currently under maintenance. Please visit
+again soon. Thank you.
+
 </pre>
 
 <pre id='BBS'>
@@ -290,7 +314,8 @@ your top destination for the latest filez
 System Operator: DJ Razor1912 [iNX/FiRM4]
 Using ProBoard 4.1 HT-DOS 3.24 w/80MB HDD
 
-Please enter your username: 
+Please enter your username: ********
+Please enter your password: *************
 </pre>
 
 <pre id='ASCII'>
