format command added to command.com

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -32,6 +32,7 @@ BBS
 DTC
 UPLOAD
 DB01.TXT
+FORMAT
 </div>
 
 <audio id='keyboardSound'><source src="keyboard.mp3" type="audio/mpeg"></audio>
@@ -359,8 +360,9 @@ Enter local filename:
 │ database located on this computer.             │
 │                                                │
 │ 2. Transfer the data payload to our partners   │
-│ at Death to Chaos. Good luck!                  │
+│ at Death to Chaos.                  │
 │                                                │
+│ 3. Format floppy disc and escape undetected.   │
 └───────────────────────────────────────────────┘
 
 </pre>
@@ -369,6 +371,17 @@ Enter local filename:
 Disconnecting modem on COM1...
 
 </pre>
+
+<pre id='FORMAT'>
+█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
+█ Formatting double-sided 360kb disc drive A:    █
+█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
+
+0%.......25%........50%........75%........100%
+    
+█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
+█ Format complete.                               █
+█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
 
 </body>
 </html>
