--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -280,6 +280,20 @@ again soon. Thank you.
 
 </pre>
 
+<pre id='4815162342'>
+Execute...
+
+ ████   █████    ████████        █████      █████   
+░░███ ███░░░███ ███░░░░███     ███░░░███  ███░░░███ 
+ ░██████   ░░██░███   ░███    ███   ░░██████   ░░███
+ ░██░███    ░██░░████████    ░███    ░██░███    ░███
+ ░██░███    ░██████░░░░███   ░███    ░██░███    ░███
+ ░██░░███   ███░███   ░███   ░░███   ███░░███   ███ 
+ ████░░░█████░ ░░████████     ░░░█████░  ░░░█████░  
+░░░░░  ░░░░░░   ░░░░░░░░        ░░░░░░     ░░░░░░   
+
+</pre>
+
 <pre id='BBS'>
 ▄ ▄▄ ▄▄ ▄ █▀▀▄ █▀▀▄ ▄▀▀▀ ▄ ▄▄ ▄  ▄  ┌────────────┐
 ▄ ▀▄█▀▄██ █ ▀▄ █ ▀▄  ▀▀▄ █▀█▄█▀▄▀ ▀ │ zModem Pro │
