Started styling Twine with CSS, added [REVEAL CODE HERE] placeholder (themed to fit in the the story)

--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -11,7 +11,9 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.8" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="789,197" size="100,100">(set: $seconds to 10)
+<tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.8" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar {display: none;}
+
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="789,197" size="100,100">(set: $seconds to 10)
 
 &#39;**DO SOMETHING!**&#39;
 You hear a scream in your left ear.
@@ -83,11 +85,13 @@ What now?
 
 (colour: &quot;#e61919&quot;)[**$seconds**] seconds left on the display and only one thing to do...
 
-[[Cut the red wire -&gt; Wire Red]]</tw-passagedata><tw-passagedata pid="11" name=" Wire Red" tags="" position="1241,983" size="100,100">(set: $seconds to $seconds - 1)
+[[Cut the red wire -&gt; Wire Red]]</tw-passagedata><tw-passagedata pid="11" name=" Wire Red" tags="" position="1241,984" size="100,100">(set: $seconds to $seconds - 1)
 
 The display stopped changing, stuck on: (colour: &quot;#e61919&quot;)[**$seconds**].
 
-The voice in the headphone started talking again. But you aren&#39;t paying attention to it any longer.
+Once all the cables are cut you notice a [REVEAL CODE HERE] inside the box.
+
+The voice in the headphone starts talking again. But you aren&#39;t paying attention to it any longer.
 
 You feel a scence of pride and relief. And a gentle but strong pull inside your body.
 
