--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -370,44 +370,41 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 
 [[main office-&gt;officeStart]]: skip intro, go to player hub
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;main menu&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="wrongVO" position="573,716.6666666666666" size="100,100">&lt;h3&gt;unsorted&lt;/h3&gt;
-(link: &quot;kornel Twine bomb&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
-(link: &quot;H Unity Ozymandias&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
-(link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
-(link: &quot;EyeForcz infinite oneil tube (mode 1)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
-(link: &quot;EyeForcz infinite oneil tube  (mode 2)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
-
-&lt;h3&gt;musical&lt;/h3&gt;
-(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
-(link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
-
-&lt;h3&gt;1980s&lt;/h3&gt;
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;main menu&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="wrongVO" position="573,716.6666666666666" size="100,100">&lt;h3&gt;1980s&lt;/h3&gt;
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 (link: &quot;Space Shot Sam, by Chris&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]
+(link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
 
 &lt;h3&gt;modern office&lt;/h3&gt;
+(link: &quot;kornel Twine bomb (resets progress, have near start)&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
 (link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern-version1~&#39;)]
-(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
+(link: &quot;Library (Twine) by Ashleigh&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]
 (link: &quot;EyeForcz bathroom&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)]
-(link: &quot;EyeForcz clock outside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)]
-(link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
-(link: &quot;EyeForcz table 1 (Crystal)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)]
+
+&lt;h3&gt;musical/toy/lab?&lt;/h3&gt;
+(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
+(link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
 (link: &quot;EyeForcz table 2 (Cars), song by Alan&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
-(link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern-version1~&#39;)]
+(link: &quot;EyeForcz table 1 (Crystal)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)]
 
 &lt;h3&gt;future tower&lt;/h3&gt;
 (link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]
 (link: &quot;Klaim Infinite Cube Swarm&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
+(link: &quot;EyeForcz infinite oneil tube (mode 1)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
+(link: &quot;EyeForcz infinite oneil tube  (mode 2)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
+(link: &quot;EyeForcz clock outside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)]
+(link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
 
-&lt;h3&gt;other areas&lt;/h3&gt;
-(link: &quot;Library (Twine) by Ashleigh&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]
+&lt;h3&gt;distant past? (time machine again from 1980s)&lt;/h3&gt;
+(link: &quot;H Unity Ozymandias&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
 
-&lt;h3&gt;stubs/tests/loose ends (may not be usable in current state)&lt;/h3&gt;
+&lt;h3&gt;stubs/tests (not usable in current state)&lt;/h3&gt;
 (link: &quot;Underwater (Unity) by Chris D&quot;)[(goto-url: &#39;unity_loader.html?phrase=Resurface_from_water&amp;file=Underwater&#39;)]
 (link: &quot;brianjb JavaScript&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 (link: &quot;jchingames twine demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
 (link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]
+(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
 </tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="785,340" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
 
 [[I get up, checking myself to make sure I&#39;m unharmed.-&gt;getUp]]
