--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -13,6 +13,24 @@
 
 <tw-storydata name="Bomb" startnode="1" creator="Twine" creator-version="2.3.8" ifid="A6BB2127-2849-44DB-8AE7-A5EF99C3BCCC" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar {display: none;}
 
+tw-story {
+  background-image: url("images/dark_room.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: black;
+}
+
+tw-passage
+{
+  color: #F0F8FF;
+}
+
+tw-story
+{
+  font-family: Lora, serif;
+  font-size: 24px;
+}
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start Point" tags="" position="788,197" size="100,100">(set: $seconds to 10)
 
 &#39;**DO SOMETHING!**&#39;
