Future View scene started with vox building, simple trail flying car traffic, linked to from main twine

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -390,6 +390,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;EyeForcz clock inside&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)]
 
 &lt;h3&gt;future tower&lt;/h3&gt;
+(link: &quot;Chris Future View&quot;)[(goto-url: &#39;unity_loader.html?phrase=Take_the_elevator_back_down&amp;file=FutureView&#39;)]
 (link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]
 (link: &quot;Klaim Infinite Cube Swarm&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
 (link: &quot;EyeForcz infinite oneil tube (mode 1)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
@@ -403,9 +404,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;brianjb JavaScript&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 (link: &quot;jchingames twine demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
-(link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]
-(link: &quot;Chris cube WIP&quot;)[(goto-url: &#39;unity_loader.html?phrase=Eject_game&amp;file=SpinTest&#39;)]
-</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="1170,306" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
+(link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="1170,306" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
 
 [[I get up, checking myself to make sure I&#39;m unharmed.-&gt;getUp]]
 
@@ -486,6 +485,8 @@ Is it a 3D video wall?
 -Walk closer to inspect
 -Head left towards the bar
 -Walk up the iron spiral stairs to the right
+
+(link: &quot;Chris Future View&quot;)[(goto-url: &#39;unity_loader.html?phrase=Take_the_elevator_back_down&amp;file=FutureView&#39;)]
 
 (link: &quot;EyeForcz infinite oneil tube (mode 1)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
 (link: &quot;EyeForcz infinite oneil tube  (mode 2)&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
@@ -646,7 +647,7 @@ Do you... wanna use it?
 [[Visit the reception area-&gt;oldReception]]
 [[Enter the private office on the left-&gt;oldOfficeL]]
 [[Enter the private office in the middle-&gt;oldOfficeM]]
-[[Enter the private office on the right-&gt;oldOfficeR]]</tw-passagedata><tw-passagedata pid="41" name="oldReception" tags="oldOffice" position="2288,780.6666666666666" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="oldOfficeL" tags="oldOffice" position="2433,779" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
+[[Enter the private office on the right-&gt;oldOfficeR]]</tw-passagedata><tw-passagedata pid="41" name="oldReception" tags="oldOffice" position="2288,780" size="100,100"></tw-passagedata><tw-passagedata pid="42" name="oldOfficeL" tags="oldOffice" position="2433,779" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
 
 (link: &quot;boot up the computer to check out the BBS&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]</tw-passagedata><tw-passagedata pid="43" name="oldOfficeM" tags="oldOffice" position="2588,784" size="100,100">It appears this employee was either being unproductive, or doing research related to their own game development. Hard to say.
 
