Fix to a twine reference from debug scene

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -376,7 +376,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
 
 &lt;h3&gt;modern office&lt;/h3&gt;
-(link: &quot;kornel Twine bomb (resets progress, have near start)&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_newspaper&amp;file=kornel_kornel-index~&#39;)]
+(link: &quot;pick up the ticking box&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
 (link: &quot;enter intern Hex&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern-version1~&#39;)]
 (link: &quot;Library (Twine) by Ashleigh&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]
 (link: &quot;EyeForcz bathroom&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)]
